Add comprehensive integration tests for real API validation
- Set up integration tests that login and validate with real backend
- Discovered real API response structures:
  * Validation: {email: {valid, provided}, phone: {valid, provided}}
  * User data: {API_Key, lead_quota_remaining, email}
- Integration tests confirm our validation fix prevents React render errors
- Ready to fix remaining stores based on real data structures

🧪 Test Results:
✅ Login with real credentials
✅ Get user profile and API key
✅ Validate email with real API - no React errors
✅ Validation response structure matches expected format

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview",
     "test": "vitest",
     "test:ui": "vitest --ui",
-    "test:run": "vitest run"
+    "test:run": "vitest run",
+    "test:integration": "vitest --config vitest.integration.config.ts",
+    "test:integration:run": "vitest run --config vitest.integration.config.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
